--- a/YourPlace/YourPlace.csproj
+++ b/YourPlace/YourPlace.csproj
@@ -217,6 +217,10 @@
     <Compile Include="Migrations\201812022227400_Add COMMENT entity, create one ot many relation with RESTAURANT entity.Designer.cs">
       <DependentUpon>201812022227400_Add COMMENT entity, create one ot many relation with RESTAURANT entity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812122202441_SeedUsers.cs" />
+    <Compile Include="Migrations\201812122202441_SeedUsers.Designer.cs">
+      <DependentUpon>201812122202441_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Comment.cs" />
@@ -325,6 +329,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812022227400_Add COMMENT entity, create one ot many relation with RESTAURANT entity.resx">
       <DependentUpon>201812022227400_Add COMMENT entity, create one ot many relation with RESTAURANT entity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812122202441_SeedUsers.resx">
+      <DependentUpon>201812122202441_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
