--- a/YourPlace/YourPlace.csproj
+++ b/YourPlace/YourPlace.csproj
@@ -237,6 +237,8 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AllCustomersViewModel.cs" />
     <Compile Include="ViewModels\AllRestaurantsViewModel.cs" />
+    <Compile Include="ViewModels\ChildReplyViewModel.cs" />
+    <Compile Include="ViewModels\ParentReplyViewModel.cs" />
     <Compile Include="ViewModels\RestaurantViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -302,7 +304,6 @@
     <Content Include="Views\Restaurants\NewRestaurant.cshtml" />
     <Content Include="Views\Restaurants\Details.cshtml" />
     <Content Include="Views\Restaurants\Edit.cshtml" />
-    <Content Include="Views\Restaurants\_Comments.cshtml" />
     <Content Include="Views\Restaurants\_Replies.cshtml" />
     <Content Include="Views\Restaurants\_ChildReplies.cshtml" />
   </ItemGroup>
