--- a/YourPlace/YourPlace.csproj
+++ b/YourPlace/YourPlace.csproj
@@ -238,6 +238,7 @@
     <Compile Include="ViewModels\AllCustomersViewModel.cs" />
     <Compile Include="ViewModels\AllRestaurantsViewModel.cs" />
     <Compile Include="ViewModels\ChildReplyViewModel.cs" />
+    <Compile Include="ViewModels\CustomerViewModel.cs" />
     <Compile Include="ViewModels\ParentReplyViewModel.cs" />
     <Compile Include="ViewModels\RestaurantViewModel.cs" />
   </ItemGroup>
@@ -306,6 +307,7 @@
     <Content Include="Views\Restaurants\Edit.cshtml" />
     <Content Include="Views\Restaurants\_Replies.cshtml" />
     <Content Include="Views\Restaurants\_ChildReplies.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
