--- a/YourPlace/YourPlace.csproj
+++ b/YourPlace/YourPlace.csproj
@@ -225,6 +225,10 @@
     <Compile Include="Migrations\201812290048239_AddedCommentAndReplyModels.Designer.cs">
       <DependentUpon>201812290048239_AddedCommentAndReplyModels.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903062115037_Added DateOfRegister to ApplicationUser model.cs" />
+    <Compile Include="Migrations\201903062115037_Added DateOfRegister to ApplicationUser model.Designer.cs">
+      <DependentUpon>201903062115037_Added DateOfRegister to ApplicationUser model.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Comment.cs" />
@@ -346,6 +350,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812290048239_AddedCommentAndReplyModels.resx">
       <DependentUpon>201812290048239_AddedCommentAndReplyModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903062115037_Added DateOfRegister to ApplicationUser model.resx">
+      <DependentUpon>201903062115037_Added DateOfRegister to ApplicationUser model.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
