--- a/YourPlace/YourPlace.csproj
+++ b/YourPlace/YourPlace.csproj
@@ -245,6 +245,10 @@
     <Compile Include="Migrations\201903092002431_CreateDateAddedToReply.Designer.cs">
       <DependentUpon>201903092002431_CreateDateAddedToReply.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903122310546_AddedManyToManyRelationToRestaurantsAndTypeTags.cs" />
+    <Compile Include="Migrations\201903122310546_AddedManyToManyRelationToRestaurantsAndTypeTags.Designer.cs">
+      <DependentUpon>201903122310546_AddedManyToManyRelationToRestaurantsAndTypeTags.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Comment.cs" />
@@ -254,6 +258,8 @@
     <Compile Include="Models\Reply.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\RestaurantTypeTags.cs" />
+    <Compile Include="Models\TypeTag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AllCustomersViewModel.cs" />
@@ -382,6 +388,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903092002431_CreateDateAddedToReply.resx">
       <DependentUpon>201903092002431_CreateDateAddedToReply.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903122310546_AddedManyToManyRelationToRestaurantsAndTypeTags.resx">
+      <DependentUpon>201903122310546_AddedManyToManyRelationToRestaurantsAndTypeTags.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
