--- a/YourPlace/YourPlace.csproj
+++ b/YourPlace/YourPlace.csproj
@@ -336,7 +336,7 @@
     <Content Include="Views\Restaurants\_Replies.cshtml" />
     <Content Include="Views\Restaurants\_ChildReplies.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
-    <Content Include="Views\Restaurants\GetRestaurantsWithThisTag.cshtml" />
+    <Content Include="Views\Restaurants\RestaurantsByTag.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
